# markdown-ppp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/ast/: mod.rs
src/html_printer/: block.rs  config.rs  index.rs  inline.rs  mod.rs  util.rs
src/html_printer/tests/: mod.rs
src/parser/: config.rs  link_util.rs  mod.rs  util.rs
src/parser/blocks/: blockquote.rs  code_block.rs  footnote_definition.rs  heading.rs  html_block.rs  link_definition.rs  list.rs  mod.rs  paragraph.rs  table.rs  thematic_break.rs
src/parser/blocks/tests/: blockquote.rs  code_block.rs  custom_parser.rs  footnote_definition.rs  heading.rs  html_block.rs  link_definition.rs  list.rs  mod.rs  paragraph.rs  table.rs  thematic_break.rs
src/parser/inline/: autolink.rs  code_span.rs  emphasis.rs  footnote_reference.rs  hard_newline.rs  html_entity.rs  image.rs  inline_link.rs  mod.rs  reference_link.rs  strikethrough.rs  text.rs
src/parser/inline/tests/: autolink.rs  code_span.rs  emphasis.rs  footnote_reference.rs  hard_newline.rs  html_entity.rs  image.rs  inline_link.rs  mod.rs  reference_link.rs  strikethrough.rs
src/printer/: block.rs  blockquote.rs  config.rs  heading.rs  inline.rs  list.rs  mod.rs  table.rs
src/printer/tests/: mod.rs
