[package]
name = "markdown-ppp"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { version = "1.0.1", optional = true }
nom = { version = "8.0.0", default-features = false, features = ["alloc"], optional = true }
unicode_categories = { version = "0.1.1", optional = true }

[features]
default = ["parser"]
parser = ["entities", "nom", "unicode_categories"]
