[package]
authors = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
name = "markdown-ppp"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Feature-rich Markdown Parsing and Pretty-Printing library"
repository = "https://github.com/johnlepikhin/markdown-ppp"
categories = ["parsing", "text-processing"]
keywords = ["markdown", "parser", "pretty-print", "format"]
documentation = "https://docs.rs/markdown-ppp"
readme = "README.md"

[dependencies]
entities = { version = "1.0.1", optional = true }
nom = { version = "8.0.0", default-features = false, features = ["alloc"], optional = true }
pretty = { version = "0.12.4", optional = true }
serde = { version = "1.0.219", features = ["serde_derive"], optional = true }
unicode_categories = { version = "0.1.1", optional = true }

[dev-dependencies]
rstest = "0.25"

[features]
default = ["parser", "printer"]
parser = ["entities", "nom", "unicode_categories"]
ast-serde = ["serde"]
printer = ["pretty"]